infra/networking/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: devops-api-route
  namespace: staging
spec:
  parentRefs:
    - name: external-gateway
  hostnames:
    - "devopstestapi2026.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: devops-test-api-devops-test-api
          port: 80
